--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   },
   "dependencies": {
     "@aws-cdk/aws-certificatemanager": "^1.88.0",
+    "@aws-cdk/aws-cloudfront": "^1.88.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.88.0",
     "@aws-cdk/aws-route53": "^1.88.0",
+    "@aws-cdk/aws-route53-patterns": "^1.88.0",
+    "@aws-cdk/aws-route53-targets": "^1.88.0",
     "@aws-cdk/core": "1.87.1",
     "source-map-support": "^0.5.16"
   }
