--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "infrastructure",
   "version": "0.1.0",
   "bin": {
-    "infrastructure": "bin/infrastructure.js"
+    "infrastructure": "bin/pipeline.js"
   },
   "scripts": {
     "build": "tsc",
@@ -24,10 +24,13 @@
     "@aws-cdk/aws-certificatemanager": "^1.88.0",
     "@aws-cdk/aws-cloudfront": "^1.88.0",
     "@aws-cdk/aws-cloudfront-origins": "^1.88.0",
+    "@aws-cdk/aws-codebuild": "^1.88.0",
+    "@aws-cdk/aws-codepipeline": "^1.88.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.88.0",
     "@aws-cdk/aws-route53": "^1.88.0",
     "@aws-cdk/aws-route53-patterns": "^1.88.0",
     "@aws-cdk/aws-route53-targets": "^1.88.0",
-    "@aws-cdk/core": "1.87.1",
+    "@aws-cdk/core": "^1.88.0",
     "source-map-support": "^0.5.16"
   }
 }
