--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "infrastructure",
   "version": "0.1.0",
   "bin": {
-    "infrastructure": "bin/pipeline.js"
+    "infrastructure": "bin/pipeline.js",
+    "slack-bot": "bin/slackbot.js"
   },
   "scripts": {
     "build": "tsc",
@@ -14,9 +15,9 @@
     "@aws-cdk/assert": "1.87.1",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.87.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.87.1",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
@@ -27,9 +28,16 @@
     "@aws-cdk/aws-codebuild": "^1.88.0",
     "@aws-cdk/aws-codepipeline": "^1.88.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.88.0",
+    "@aws-cdk/aws-codestarnotifications": "^1.88.0",
+    "@aws-cdk/aws-events": "^1.88.0",
+    "@aws-cdk/aws-events-targets": "^1.88.0",
+    "@aws-cdk/aws-lambda": "^1.88.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.88.0",
     "@aws-cdk/aws-route53": "^1.88.0",
     "@aws-cdk/aws-route53-patterns": "^1.88.0",
     "@aws-cdk/aws-route53-targets": "^1.88.0",
+    "@aws-cdk/aws-sns": "^1.88.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.88.0",
     "@aws-cdk/core": "^1.88.0",
     "source-map-support": "^0.5.16"
   }
