--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "^1.88.0",
-    "@aws-cdk/aws-cloudfront": "^1.88.0",
-    "@aws-cdk/aws-cloudfront-origins": "^1.88.0",
-    "@aws-cdk/aws-codebuild": "^1.88.0",
-    "@aws-cdk/aws-codepipeline": "^1.88.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.88.0",
-    "@aws-cdk/aws-codestarnotifications": "^1.88.0",
-    "@aws-cdk/aws-events": "^1.88.0",
-    "@aws-cdk/aws-events-targets": "^1.88.0",
-    "@aws-cdk/aws-lambda": "^1.88.0",
-    "@aws-cdk/aws-lambda-event-sources": "^1.88.0",
-    "@aws-cdk/aws-route53": "^1.88.0",
-    "@aws-cdk/aws-route53-patterns": "^1.88.0",
-    "@aws-cdk/aws-route53-targets": "^1.88.0",
-    "@aws-cdk/aws-sns": "^1.88.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.88.0",
-    "@aws-cdk/core": "^1.88.0",
+    "@aws-cdk/aws-certificatemanager": "1.87.1",
+    "@aws-cdk/aws-cloudfront": "1.87.1",
+    "@aws-cdk/aws-cloudfront-origins": "1.87.1",
+    "@aws-cdk/aws-codebuild": "1.87.1",
+    "@aws-cdk/aws-codepipeline": "1.87.1",
+    "@aws-cdk/aws-codepipeline-actions": "1.87.1",
+    "@aws-cdk/aws-codestarnotifications": "1.87.1",
+    "@aws-cdk/aws-events": "1.87.1",
+    "@aws-cdk/aws-events-targets": "1.87.1",
+    "@aws-cdk/aws-lambda": "1.87.1",
+    "@aws-cdk/aws-lambda-event-sources": "1.87.1",
+    "@aws-cdk/aws-route53": "1.87.1",
+    "@aws-cdk/aws-route53-patterns": "1.87.1",
+    "@aws-cdk/aws-route53-targets": "1.87.1",
+    "@aws-cdk/aws-sns": "1.87.1",
+    "@aws-cdk/aws-sns-subscriptions": "1.87.1",
+    "@aws-cdk/core": "1.87.1",
     "source-map-support": "^0.5.16"
   }
 }
