--- a/package.json
+++ b/package.json
@@ -12,33 +12,36 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.87.1",
+    "@aws-cdk/assert": "^1.93.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.87.1",
+    "@types/node": "^10.17.27",
+    "aws-cdk": "^1.93.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-certificatemanager": "1.87.1",
-    "@aws-cdk/aws-cloudfront": "1.87.1",
-    "@aws-cdk/aws-cloudfront-origins": "1.87.1",
-    "@aws-cdk/aws-codebuild": "1.87.1",
-    "@aws-cdk/aws-codepipeline": "1.87.1",
-    "@aws-cdk/aws-codepipeline-actions": "1.87.1",
-    "@aws-cdk/aws-codestarnotifications": "1.87.1",
-    "@aws-cdk/aws-events": "1.87.1",
-    "@aws-cdk/aws-events-targets": "1.87.1",
-    "@aws-cdk/aws-lambda": "1.87.1",
-    "@aws-cdk/aws-lambda-event-sources": "1.87.1",
-    "@aws-cdk/aws-route53": "1.87.1",
-    "@aws-cdk/aws-route53-patterns": "1.87.1",
-    "@aws-cdk/aws-route53-targets": "1.87.1",
-    "@aws-cdk/aws-sns": "1.87.1",
-    "@aws-cdk/aws-sns-subscriptions": "1.87.1",
-    "@aws-cdk/core": "1.87.1",
+    "@aws-cdk/aws-certificatemanager": "^1.93.0",
+    "@aws-cdk/aws-cloudfront": "^1.93.0",
+    "@aws-cdk/aws-cloudfront-origins": "^1.93.0",
+    "@aws-cdk/aws-codebuild": "^1.93.0",
+    "@aws-cdk/aws-codepipeline": "^1.93.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.93.0",
+    "@aws-cdk/aws-codestarnotifications": "^1.93.0",
+    "@aws-cdk/aws-events": "^1.93.0",
+    "@aws-cdk/aws-events-targets": "^1.93.0",
+    "@aws-cdk/aws-lambda": "^1.93.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.93.0",
+    "@aws-cdk/aws-route53": "^1.93.0",
+    "@aws-cdk/aws-route53-patterns": "^1.93.0",
+    "@aws-cdk/aws-route53-targets": "^1.93.0",
+    "@aws-cdk/aws-sns": "^1.93.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.93.0",
+    "@aws-cdk/core": "^1.93.0",
+    "@cloudcomponents/cdk-codepipeline-slack": "1.28.0",
+    "dotenv": "^8.2.0",
+    "package.json": "^2.0.1",
     "source-map-support": "^0.5.16"
   }
 }
